# mine-rs

./: .gitignore  Cargo.toml  README.md
auth/: Cargo.toml
auth/examples/: auth.rs
auth/src/: lib.rs
chat/: Cargo.toml
chat/src/: lib.rs
data/: Cargo.toml
data/derive/: Cargo.toml
data/derive/src/: block.rs  enchant.rs  inv.rs  item.rs  lib.rs
data/src/: block.rs  inv.rs  lib.rs
data/src/inv/: enchant.rs  item.rs
encoding/: Cargo.toml
encoding/derive/: Cargo.toml
encoding/derive/src/: attribute.rs  enum.rs  fields.rs  generics.rs  lib.rs  struct.rs
encoding/src/: attrs.rs  decode.rs  encode.rs  lib.rs  separated.rs
encoding/src/attrs/: angle.rs  counted.rs  fixed.rs  mutf8.rs  rest.rs  stringuuid.rs  var.rs
encoding/src/decode/: bool.rs  cow.rs  num.rs  option.rs  slice.rs  str.rs  string.rs  uuid.rs  vec.rs
encoding/src/encode/: bool.rs  cow.rs  num.rs  option.rs  slice.rs  str.rs  string.rs  uuid.rs  vec.rs
examples/: mvp.rs
level/: Cargo.toml
level/src/: chunk.rs  containers.rs  lib.rs  region.rs
level/src/containers/: bitpack.rs  palette.rs
level/src/containers/bitpack/: byteorder.rs
level/test_data/: testchunk.nbt
nbt/: Cargo.toml
nbt/derive/: Cargo.toml
nbt/derive/src/: lib.rs
nbt/serde/: Cargo.toml
nbt/serde/src/: de.rs  error.rs  lib.rs  ser.rs
nbt/src/: compound.rs  de.rs  lib.rs  list.rs  macros.rs  tag.rs  test.rs  value.rs
nbt/src/de/: impls.rs  mod.rs
nbt/src/ser/: mod.rs
net/: Cargo.toml
net/encryption/: Cargo.toml
net/encryption/src/: lib.rs
net/src/: conn.rs  encoding.rs  lib.rs  packet.rs  packing.rs  readhalf.rs  workpool.rs  writehalf.rs  writer.rs
net/src/conn/: readhalf.rs  writehalf.rs
net/src/conn/writehalf/: writer.rs
packet/: Cargo.toml
packet/src/: lib.rs
packet/src/to_static/: bool.rs  cow.rs  encoding.rs
packets/: Cargo.toml
packets/derive/: Cargo.toml
packets/derive/src/: lib.rs  packets.rs  protocol.rs  to_static.rs
packets/derive/src/protocol/: attribute.rs  enum.rs  struct.rs
packets/src/: attrs.rs  errors.rs  impls.rs  lib.rs
packets/src/attrs/: angle.rs  count.rs  exact.rs  fixed.rs  stringuuid.rs  var.rs
packets/src/impls/: bool.rs  buffer.rs  num.rs  vec.rs
packets/src/netty/: handshaking.rs  login.rs  play.rs  status.rs
packets/src/netty/handshaking/: serverbound.rs
packets/src/netty/login/: clientbound.rs  serverbound.rs
packets/src/netty/play/: clientbound.rs  serverbound.rs
packets/src/netty/status/: clientbound.rs  serverbound.rs
packets/traits/: Cargo.toml
packets/traits/src/: lib.rs  to_static.rs
packets/traits/src/to_static/: cow.rs  num.rs  option.rs  string.rs  vec.rs
protocol/: Cargo.toml
protocol-derive/: Cargo.toml
protocol-derive/src/: attribute.rs  lib.rs  packets.rs  replace.rs
protocol-derive/src/protocol/: attribute.rs  enum.rs  mod.rs  struct.rs
protocol/derive/: Cargo.toml
protocol/derive/src/: lib.rs  parsing_tree.rs  replace.rs  to_static.rs
protocol/derive/src/protocol/: attribute.rs  enum.rs  struct.rs
protocol/src/: impls.rs  lib.rs  netty.rs
protocol/src/attrs/: angle.rs  count.rs  stringuuid.rs  var.rs
protocol/src/impls/: bool.rs  buffer.rs  mod.rs  num.rs  string.rs  vec.rs
protocol/src/netty/: handshaking.rs  login.rs  play.rs  status.rs  types.rs
protocol/src/netty/handshaking/: serverbound.rs
protocol/src/netty/login/: clientbound.rs  serverbound.rs
protocol/src/netty/play/: clientbound.rs  mod.rs  serverbound.rs
protocol/src/netty/play/clientbound/: emd.rs
protocol/src/netty/status/: clientbound.rs  mod.rs  serverbound.rs
protocol/src/netty/types/: angle.rs  entity_metadata.rs  particle.rs  position.rs  slot.rs
src/: lib.rs
to_static/: Cargo.toml
to_static/derive/: Cargo.toml
to_static/derive/src/: lib.rs
to_static/src/: btreemap.rs  hashmap.rs  lib.rs  nonzero.rs  uuid.rs
util/: Cargo.toml
util/src/: bufpool.rs  lib.rs
version/: Cargo.toml
version/src/: lib.rs
