[package]
name = "miners"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["net", "protocol", "packet"]
net = ["dep:miners-net"]
protocol = ["dep:miners-protocol", "packet"]
packet = ["dep:miners-packet"]
auth = ["dep:miners-auth"]
chat = ["dep:miners-chat"]

[dependencies]
miners-packet = { path = "packet", version = "0.0.0-beta.0", optional = true }
miners-protocol = { path = "protocol", version = "0.0.0-beta.0", optional = true }
miners-net = { path = "net", version = "0.0.0-beta.0", optional = true }
miners-auth = { path = "auth", version = "0.0.0-beta.0", optional = true}
miners-chat = { path = "chat", version = "0.0.0-beta.0", optional = true}

[workspace]
members = [
  "encoding",
  "encoding/derive",
  "packet",
  "protocol",
  "protocol/derive",
  "net",
  "net/encryption",
  "auth", 
  "chat",
]
