[package]
name = "miners"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["net", "protocol", "version"]
net = ["dep:miners-net"]
auth = ["dep:miners-auth"]
chat = ["dep:miners-chat"]
protocol = ["dep:miners-protocol", "packet", "to_static_derive", "encoding_derive", "nbt"]
packet = ["dep:miners-packet"]
nbt = ["dep:miners-nbt"]
encoding_derive = ["dep:miners-encoding-derive", "encoding"]
encoding = ["dep:miners-encoding"]
to_static_derive = ["dep:miners-to-static-derive", "to_static"]
to_static = ["dep:miners-to-static", "miners-nbt?/to_static"]
version = ["dep:miners-version"]

[dependencies]
miners-net = { path = "net", version = "0.0.0-beta.0", optional = true }
miners-auth = { path = "auth", version = "0.0.0-beta.0", optional = true }
miners-chat = { path = "chat", version = "0.0.0-beta.0", optional = true }
miners-protocol = { path = "protocol", version = "0.0.0-beta.0", optional = true }
miners-packet = { path = "packet", version = "0.0.0-beta.0", optional = true }
miners-nbt = { path = "nbt", version = "0.0.0-beta.0", optional = true }
miners-encoding-derive = { path = "encoding/derive", version = "0.0.0-beta.0", optional = true }
miners-encoding = { path = "encoding", version = "0.0.0-beta.0", optional = true }
miners-to-static-derive = { path = "to_static/derive", version = "0.0.0-beta.0", optional = true }
miners-to-static = { path = "to_static", version = "0.0.0-beta.0", optional = true }
miners-version = { path = "version", version = "0.0.0-beta.0", optional = true }

[dev-dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.23"
miners-level = { path = "level" }
futures-lite = "1.13.0"
isahc = { version = "1.7.2", features = ["json"] }
miners = { git = "https://github.com/mine-rs/mine-rs" }
num-bigint = "0.4.3"
rand = "0.8.5"
rsa = "0.9.2"
serde_json = "1.0.96"
sha1 = "0.10.5"
uuid = "1.3.3"

[workspace]
members = [
  "encoding",
  "encoding/derive",
  "packet",
  "protocol",
  "protocol/derive",
  "net",
  "nbt",
  "auth",
  "chat",
  "to_static",
  "to_static/derive",
  "version",
]
