[package]
name = "miners-auth"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for obtaining a minecraft access token using the microsoft auth flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"]}
chrono = "0.4.22"
serde_json = "1.0.85"
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1.0.32"
futures-io = "0.3.24"
futures-util = { version = "0.3.24", default-features = false, features = ["io"]}
