[package]
name = "miners-auth"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for obtaining a minecraft access token using the microsoft auth flow"

[features]
reqwest = ["dep:reqwest", "dep:bytes"]
default = ["reqwest"]

[dependencies]
anyhow = "1.0.63"
http = "0.2.8"
async-trait = "0.1.57"
async-fs = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"], optional = true }
bytes = { version = "1.2.1", optional = true }
chrono = "0.4.22"
serde_json = "1.0.85"
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1.0.32"
futures-io = "0.3.24"
futures-util = { version = "0.3.24", default-features = false, features = ["io"]}

[dev-dependencies]
# Note: Tokio is only used in the example, this crate is executor agnostic
tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread"]} 

[[example]]
name = "auth"
required-features = ["reqwest"]
