[package]
name = "miners-encoding"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.32"
uuid = { version = "1.1.2", optional = true }

[dependencies.miners-to-static]
version = "0.0.0-beta.0"
optional = true
path = "../to_static"
features = ["uuid"]

[features]
default = ["dep:uuid", "to_static"]
to_static = ["dep:miners-to-static"]
