[package]
name = "miners-level"
version = "0.0.0-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
flate2 = "1.0.25"
bumpalo = "3.13.0"
miners-nbt = { path = "../nbt", version = "0.0.0-beta.0" }
miners-encoding = { path = "../encoding", version = "0.0.0-beta.0" }