[package]
name = "miners-net"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for low level minecraft networking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
cfb8 = "0.8.1"
aes = "0.8.1"
flate2 = "1.0.24"
miners-encoding = { version = "0.0.0-beta.0", optional = true, path = "../encoding" }
blocking = { version = "1.2.0", optional = true }

[features]
default = ["encoding", "blocking"]
encoding = ["dep:miners-encoding"]
