[package]
name = "miners-packets"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
miners-encoding = { path = "../encoding", version = "0.0.0-beta.0" }
miners-packets-derive = { path = "derive", version = "0.0.0-beta.0" }
miners-packets-traits = { path = "traits", version = "0.0.0-beta.0" }
uuid = "1.1.2"
