[package]
name = "miners-protocol"
version = "0.0.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A library defining the packets of the minecraft protocol"

[dependencies]
miners-encoding-derive = { path = "../encoding/derive", version = "0.0.0-beta.0" }
miners-protocol-derive = { path = "./derive", version = "0.0.0-beta.0" }
miners-encoding = { path = "../encoding", version = "0.0.0-beta.0" }
miners-packet = { path = "../packet", version = "0.0.0-beta.0" }
miners-to-static = { path = "../to_static", version = "0.0.0-beta.0" }
uuid = "1.1.2"
