[package]
name = "miners-data-derive"
version = "0.0.0-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.100"
syn = { version = "1.0.99", features = ["full"] }
ureq = "2.7.1"
