[package]
name = "miners-net-encryption"
version = "0.0.0-beta.0"
edition = "2021"
description = "An encryption threadpool for internal use in miners-net"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tracing = ["dep:tracing"]
default = ["tracing"]

[dependencies]
once_cell = "1.14.0"
cfb8 = "0.8.1"
aes = "0.8.1"
tracing = { version = "0.1.36", optional = true}
futures-channel = "0.3.24"